service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8083'
spec:
  selector: 
    app: nexus-server
  type: ClusterIP  
  ports:
    - port: 8083
      targetPort: 8081
