ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: nexus-server
  name: nexus-server
  namespace: nexus
spec:
  rules:
  - host: "nexus.als001.corp.amplelogic.com"
    http:
        paths:
        - backend:
            service:
              name: nexus-service
              port:
                number: 8083
          path: /
          pathType: Prefix
